--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 <body>
 
 <h1>Hello world!</h1>
-<p>text</p>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-<p>images</p>
-</body>
-</html>
+<p> I am a Computer Science Student at SIM with a passion for programming, 
+software development and big data engineering.</p>
+
+<h2>Skillsets:</h2>
+<p>Programming Languages: Python, Java, C++</p>
+<p>Web development: HTML, CSS, JavaScript, XML, XSD</p>
+<p>Database Management: SQL, PLSQL(worked on Oracle Database 
+19c), NoSQL(worked on mongoDB)</p>
+<p>Operating systems: macOS, Oracle Linux, Ubuntu Linux</p>
+
+ </body> </html>
