--- a/index.html
+++ b/index.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
-</head>
-<body>
+  <head>
+    <title>Home</title>
+      <link rel="stylesheet" href="bluestyle.css">
+  </head>
+  <body>
+    <div class="topnav">
+      <a class="home" href="#home">Home</a>
+      <a class="portfolio" href="#portfolio">Portfolio</a>
+      <a class="contact" href="#contact">Contact</a>
+    </div>
 
-<h1>Hello world!</h1>
-<p> I am a Computer Science Student at SIM with a passion for programming, 
-software development and big data engineering.</p>
+      <h1 id="home">Jin An</h1>
+      <h3>Computer Science Student</h3>
 
-<h2>Skillsets:</h2>
-<p>Programming Languages: Python, Java, C++</p>
-<p>Web development: HTML, CSS, JavaScript, XML, XSD</p>
-<p>Database Management: SQL, PLSQL(worked on Oracle Database 
-19c), NoSQL(worked on mongoDB)</p>
-<p>Operating systems: macOS, Oracle Linux, Ubuntu Linux</p>
+      <p>Hi, I am currently studying at SIM(GE), University of Wollongong with a major on big data</p>
+      <div></div>
+      <p>Previously, I studied Banking and Finance in Ngee Ann Polytechnic for my diploma. However, 
+         for my bachelor's I have decided to explore a different field of study that will give me a
+         more diverse skillset. </p>
+      <div></div>
+      <p>My exposure to both knowledge fields in finance and computer science has certainly broaden my horizens.
+         Given the opportunity, I wish to work on implementing big data analytics in the financial sector to optimize
+         financial processes.
+      </p>
 
- </body> </html>
+      <h2 id="portfolio">Portfolio</h2>
+      <h3>Skillsets:</h3>
+      <p>Programming Languages: Python, Java, C++</p>
+      <p>Web development: HTML, CSS, JavaScript, XML, XSD</p>
+      <p>Database Management: SQL, PLSQL(worked on Oracle Database
+          19c), NoSQL(worked on mongoDB)</p>
+      <p>Operating systems: macOS, Linux</p>
+
+      <h2 id="contact">Contact </h2>
+      Email:
+   
+
+   
+
+  </body>
+</html>
