--- a/index.html
+++ b/index.html
@@ -5,24 +5,15 @@
       <link rel="stylesheet" href="bluestyle.css">
   </head>
   <body>
-    <div class="topnav">
-      <a class="home" href="#home">Home</a>
-      <a class="portfolio" href="#portfolio">Portfolio</a>
-      <a class="contact" href="#contact">Contact</a>
+    <div class="rightnav">
+        <a class="home" href="#home">Home</a>
+        <a class="portfolio" href="#portfolio">Portfolio</a>
+        <a class="contact" href="#contact">Contact</a>
     </div>
+    <h1 id="home">Jin An</h1>
 
-      <h1 id="home">Jin An</h1>
-      <h3>Computer Science Student</h3>
-
-      <p>Hi, I am currently studying at SIM(GE), University of Wollongong with a major on big data</p>
-      <div></div>
-      <p>Previously, I studied Banking and Finance in Ngee Ann Polytechnic for my diploma. However, 
-         for my bachelor's I have decided to explore a different field of study that will give me a
-         more diverse skillset. </p>
-      <div></div>
-      <p>My exposure to both knowledge fields in finance and computer science has certainly broaden my horizens.
-         Given the opportunity, I wish to work on implementing big data analytics in the financial sector to optimize
-         financial processes.
-      </p>
+      
+      <h3 id="title">Computer Science Student</h3>
+    
   </body>
 </html>
