--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
     <h2 id="portfolio">Portfolio</h2>
+      <h3>Introduction:</h3>
+      <p>Hi, I am currently studying at SIM(GE), University of Wollongong with a major on big data.
+        I studied Banking and Finance in Ngee Ann Polytechnic for my diploma. However, 
+         for my bachelor's I have decided to explore a different field of study that will give me a
+         more diverse skillset.
+            My exposure to both knowledge fields in finance and computer science has certainly broaden my horizens.
+         Given the opportunity, I wish to work on implementing big data analytics in the financial sector to optimize
+         financial processes.
+      </p>
       <h3>Skillsets:</h3>
       <p>Programming Languages: Python, Java, C++</p>
       <p>Web development: HTML, CSS, JavaScript, XML, XSD</p>
