rightnav to left

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <div class="rightnav">
+    <div class="leftnav">
         <a class="home" href="#">Home</a>
         <a class="portfolio" href="#portfolio">Portfolio</a>
         <a class="contact" href="#contact">Contact</a>
