--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="bluestyle.css">
       <script src="https://kit.fontawesome.com/19f74ae25f.js" crossorigin="anonymous"></script>
   </head>
