--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
   <head>
     <title>Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="bluestyle.css">
+      <meta content="width=device-width, initial-scale=1" name="viewport" />
       <script src="https://kit.fontawesome.com/19f74ae25f.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div class="leftnav">
-        <a class="home" href="#">Home</a>
-        <a class="home" href="#about">About</a>
-        <a class="portfolio" href="#portfolio">Portfolio</a>
-        <a class="contact" href="#contact">Contact</a>
-    </div>
-    <div class="center">
-      <h1 id="home">Jin An</h1>
-      <h2 id="title">Computer Science Student</h2>
-    </div>
-<!---------------------------------------------------------------------------------------------------------------------------->
-    <div class="middle">
+    </head>
+    <body>
+      <div class="leftnav">
+          <a class="home" href="#">Home</a>
+          <a class="about" href="#about">About</a>
+          <a class="portfolio" href="#portfolio">Portfolio</a>
+          <a class="contact" href="#contact">Contact</a>
+      </div>
+      <div class="center">
+        <h1 id="home">Jin An</h1>
+        <h2 id="title">Computer Science Student</h2>
+      </div>
+  <!---------------------------------------------------------------------------------------------------------------------------->
+      <div class="middle">
         <h3 id="about" style="font-size:100px;margin-bottom: 20px;margin-left: 30px">Welcome.</h3>
         <hr>
         <p>I am a student at SIM(GE), University of Wollongong with a major on Big Data.
