--- a/index.html
+++ b/index.html
@@ -83,6 +83,17 @@
 <!---------------------------------------------------------------------------------------------------------------------------->
         <h3 id="portfolio">Projects</h3>
         <hr>
+        <h5 style="text-decoration: underline;font-size: 20px;margin-left: 60px;">Baccarat Game</h5>
+        <div class="baccaratVideoContainer">
+          <video width="640" height="360" controls>
+            <source src="Baccarat.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+          <b>This project is developed with Java following Object Oriented Principals and features a Graphical User Interface(GUI) built with swing.
+             Users can enter their own username and the amount of chips they like before using those chips to bet on either Player or Dealer("Banker").
+            To find out more about this project, you can visit my <a href="https://github.com/Jin407/Baccarat" target="_blank">GitHub repository</a>.
+          </b>
+        </div>
 <!---------------------------------------------------------------------------------------------------------------------------->
         <h3 id="contact">Contacts</h3>
         <hr>
