Updated logo labels and a tags

--- a/index.html
+++ b/index.html
@@ -71,15 +71,17 @@
                 <i class="fab fa-js"></i>
               </div>
             </div>
+            <p> HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JavaScript</p>
           
           <h4 style="text-align: left;margin-left: 60px;margin-bottom: 20px;text-decoration: underline;"><i class="fa-solid fa-laptop-code" style="margin-right: 10px;"></i>Operating System</h4>
             <div class="skills">
               <div class="skill">
-                <i class="fa-brands fa-apple"></i>
+                <i class="fa-brands fa-apple"></i>     
                 <i class="fa-brands fa-linux"></i>
-                <i class="fa-brands fa-ubuntu"></i>
               </div>
             </div>
+
+            <p> MacOS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Linux</p>
 <!---------------------------------------------------------------------------------------------------------------------------->
         <h3 id="portfolio">Projects</h3>
         <hr>
@@ -97,26 +99,19 @@
         <h3 id="contact">Contacts</h3>
         <hr>
         <div class="contact-icons">
-          <div class="location">
+          
             <a href="https://www.google.com/maps/place/Singapore" target="_blank">
               <i class="fa-solid fa-location-dot" style="margin-left: 62px; font-size: 40px;color:black"></i>
-            </a>
-          </div>        
-          <div class="email">
+            </a>      
             <a href="mailto:limjinan407@gmail.com">
-              <i class="fa-regular fa-envelope" style="margin-left: 62px;font-size: 40px;color: black;"></i>
-            </a>
-          </div>        
-          <div class="linkedin">
+              <i class="fa-regular fa-envelope" style="margin-left: 30px;font-size: 40px;color: black;"></i>
+            </a>     
             <a href="https://www.linkedin.com/in/limjinan/" target="_blank" style="margin-left:25px;text-decoration: none;color: #1D2023;">
-              <i class="fa-brands fa-linkedin" style="margin-left: 40px;font-size: 40px;"></i></i>
+              <i class="fa-brands fa-linkedin" style="margin-left: 10px;font-size: 40px;"></i></i>
             </a>
-          </div>
-          <div class="linkedin">
             <a href="https://github.com/Jin407" target="_blank" style="margin-left:25px;text-decoration: none;color: #1D2023;">
-              <i class="fa-brands fa-github" style="margin-left: 40px;font-size: 40px;"></i></i>
+              <i class="fa-brands fa-github" style="margin-left: 10px;font-size: 40px;"></i></i>
             </a>
-          </div>
         </div>
         <button class="resume">
           <a href="https://drive.google.com/file/d/1fmG576m8bZxQwNu5wMLHJHv9KRnlbmYj/view?usp=share_link" target="_blank">
