Updated logo according to copyrights

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <i class="fa-brands fa-python" style="font-size: 80px;margin-right: 10px;"></i> Python
           </p>          
           <div class="progress-container">
-            <div class="progress-bar" style="width: 80%;">80</div>
+            <div class="progress-bar" style="width: 90%;">90</div>
           </div>
         </div>
         
         <div class="skill-container">
           <p class="skill-label" style="display: flex; align-items: center;">
-            <i class="fa-brands fa-java" style="font-size: 80px;margin-right: 10px;"></i> Java
+            <a style="color:black;" href="https://www.oracle.com/java/index.html" target="_blank"><i class="fa-brands fa-java" style="font-size: 80px;margin-right: 10px;"></i> </a>Java
           </p>          
           <div class="progress-container">
             <div class="progress-bar" style="width: 90%;">90</div>
@@ -74,14 +74,8 @@
             <p> HTML&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;CSS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JavaScript</p>
           
           <h4 style="text-align: left;margin-left: 60px;margin-bottom: 20px;text-decoration: underline;"><i class="fa-solid fa-laptop-code" style="margin-right: 10px;"></i>Operating System</h4>
-            <div class="skills">
-              <div class="skill">
-                <i class="fa-brands fa-apple"></i>     
-                <i class="fa-brands fa-linux"></i>
-              </div>
-            </div>
-
-            <p> MacOS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Linux</p>
+            <p> MacOS</p>
+            <p>Linux</p>
 <!---------------------------------------------------------------------------------------------------------------------------->
         <h3 id="portfolio">Projects</h3>
         <hr>
